# sap-cxii-tech-ex-01

./: .gitignore  Dockerfile  EDA.ipynb  README.md  main.py  pyproject.toml
app/: __init__.py  data_loader.py  model.py  routes.py  similarity.py
app/store/: __init__.py  base.py  data_store.py  embedder.py  feature_store.py  semantic_store.py  vectordb.py
