[project]
name = "sap-cxii-tech-ex-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "fastapi>=0.136.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.0",
    "uvicorn>=0.48.0",
]
